--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Unipv Translator</title>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
   </head>
 
   <script src="{{url_for('static', filename='scripts/index.js')}}"></script>
+  <style media="screen">
 
-  <body>
+  </style>
+
+  <body onload="focus_on_input();">
     <select id="from" name="from" data-placeholder="Choose a Language...">
       <option value="AR">Arabic</option>
       <option value="AZ">Azerbaijani</option>
@@ -40,9 +44,10 @@
       <option value="TR">Turkish</option>
       <option value="UK">Ukrainian</option>
     </select>
-    <textarea id="from_text" name="name" rows="8" cols="40%""></textarea>
+    <!-- <textarea id="from_text" name="name" rows="8" cols="40%" onkeyup="send_text();"></textarea> -->
+    <textarea id="from_text" name="name" rows="8" cols="40%"></textarea>
 
-    <img src="{{url_for('static', filename='res/switch.png')}}" id="invert" width="20px" onClick="switch_lang();">
+    <button type="button" name="invert" id="invert" onClick="switch_lang();"><i class="ri-arrow-left-right-fill"></i></button>
 
     <select id="to" name="to" data-placeholder="Choose a Language...">
       <option value="AR">Arabic</option>
