--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,10 +8,33 @@
 
   <script src="{{url_for('static', filename='scripts/index.js')}}"></script>
   <style media="screen">
+  .menu {
+    background: yellow;
+    border-radius: 3px;
+    width: 100%;
+    align-items: center;
+    position: sticky;
+    top: 1%;
+  }
 
+  .menu a.currentpage {
+    font-weight: bolder;
+    filter: drop-shadow(0px 0px 4px white);
+  }
+
+  a:hover {
+    transition: 0.5s;
+    transform: scale(1.2) perspective(1px);
+  }
   </style>
 
   <body onload="focus_on_input();">
+    <div id="menu" class="menu">
+      <a class="logo currentpage" title="Home" href="/">CloudTranslator</a>
+      <a href="/" class="currentpage link">Home</a>
+      <a href="community.html" class="link">Community Contribution</a>
+   </a>
+ </div>
     <select id="from" name="from" data-placeholder="Choose a Language...">
       <option value="AR">Arabic</option>
       <option value="AZ">Azerbaijani</option>
