--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -1,18 +1,61 @@
-.menu {
-    background: yellow;
-    border-radius: 3px;
-    width: 100%;
-    align-items: center;
-    position: sticky;
-    top: 1%;
-  }
-
-.menu a.currentpage {
-    font-weight: bolder;
-    filter: drop-shadow(0px 0px 4px white);
+@font-face {
+  font-family: Quicksand;
+  src: url('../font/Quicksand/Quicksand-VariableFont_wght.ttf');
 }
 
-a:hover {
-    transition: 0.5s;
-    transform: scale(1.2) perspective(1px);
+body {
+    margin: 0;
+    font-family: Quicksand;
 }
+
+ul.topnav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  position: relative;
+}
+
+ul.topnav li {float: left;}
+
+ul.topnav li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+ul.topnav li a:hover:not(.active) {background-color: #111;}
+
+ul.topnav li a.active {background-color: #04AA6D;}
+
+ul.topnav li.right {float: right;}
+
+@media screen and (max-width: 600px) {
+  ul.topnav li.right, 
+  ul.topnav li {float: none;}
+}
+
+.complex {
+    text-align: center;
+    margin-top: 10%;
+}
+
+.complex select {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.complex textarea {
+    margin-right: 20px;
+}
+
+.complex .invert {
+    margin: 10px;
+}
+
+
+
+
