--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,22 +2,23 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unipv Translator</title>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
   </head>
 
-  <script src="{{url_for('static', filename='scripts/index.js')}}"></script>
   <link rel="stylesheet" href="{{url_for('static', filename='css/index.css')}}"></link>
 
 
-  <body onload="focus_on_input();">
-    <div id="menu" class="menu">
-      <a class="logo currentpage" title="Home" href="/">CloudTranslator</a>
-      <a href="/" class="currentpage link">Home</a>
-      <a href="community.html" class="link">Community Contribution</a>
-   </a>
- </div>
-    <select id="from" name="from" data-placeholder="Choose a Language...">
+  <body>
+    <ul class="topnav">
+      <li><a class="active" title="Home" href="/">CloudTranslator</a></li>
+      <li><a href="/">Home</a></li>
+      <li><a href="community.html">Community Contribution</a></li>
+    </ul>
+
+   <div class="complex">
+    <select id="from" name="from" class="from" data-placeholder="Choose a Language...">
       <option value="AR">Arabic</option>
       <option value="AZ">Azerbaijani</option>
       <option value="ZH">Chinese</option>
@@ -50,11 +51,11 @@
       <option value="UK">Ukrainian</option>
     </select>
     <!-- <textarea id="from_text" name="name" rows="8" cols="40%" onkeyup="send_text();"></textarea> -->
-    <textarea id="from_text" name="name" rows="8" cols="40%"></textarea>
+    <textarea id="from_text" class="from_text" name="name" rows="8" cols="40%"></textarea>
 
-    <button type="button" name="invert" id="invert" onClick="switch_lang();"><i class="ri-arrow-left-right-fill"></i></button>
+    <button type="button" name="invert" id="invert" class= "invert"><i class="ri-arrow-left-right-fill"></i></button>
 
-    <select id="to" name="to" data-placeholder="Choose a Language...">
+    <select id="to" name="to" class="to" data-placeholder="Choose a Language...">
       <option value="AR">Arabic</option>
       <option value="AZ">Azerbaijani</option>
       <option value="ZH">Chinese</option>
@@ -86,7 +87,10 @@
       <option value="TR">Turkish</option>
       <option value="UK">Ukrainian</option>
     </select>
-    <textarea id="to_text" name="to_text" rows="8" cols="40%"></textarea>
-    <input type="button" name="Traduci" value="Traduci" onclick="send_text();">
+    <textarea id="to_text" class="to_text" name="to_text" rows="8" cols="40%"></textarea>
+    <input type="button" id="translate" class="translate "name="translate" value="Translate">
+  </div> 
   </body>
+
+  <script src="{{url_for('static', filename='scripts/index.js')}}"></script>
 </html>
