--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -12,9 +12,10 @@
 
   <body>
     <ul class="topnav">
-      <li><a class="active" title="Home" href="/">CloudTranslator</a></li>
+      <li><a class="active" title="Home" href="/"><img src="{{url_for('static', filename='res/logoCloudTranslatorSVG.svg')}}" width="150px" height="60px"></a></li>
       <li><a href="/">Home</a></li>
-      <li><a href="community.html">Community Contribution</a></li>
+      <li><a href="community.html">Community</a></li>
+      <li class="right"><a href="about.html">About</a></li>
     </ul>
 
    <div class="complex">
