--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -51,8 +51,9 @@
       <option value="TR">Turkish</option>
       <option value="UK">Ukrainian</option>
     </select>
-    <!-- <textarea id="from_text" name="name" rows="8" cols="40%" onkeyup="send_text();"></textarea> -->
-    <textarea id="from_text" class="from_text" name="name" rows="8" cols="40%"></textarea>
+    <!-- <textarea id="from_text" name="name" rows="8" cols="40%" onkeyup="setTimeout(send_text(),5000);"></textarea> -->
+    <!-- <textarea id="from_text" class="from_text" name="name" rows="8" cols="40%"></textarea> -->
+    <textarea id="from_text" name="name" rows="8" cols="40%"></textarea>
 
     <button type="button" name="invert" id="invert" class= "invert"><i class="ri-arrow-left-right-fill"></i></button>
 
