--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,96 +1,98 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unipv Translator</title>
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Unipv Translator</title>
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+</head>
 
-  <link rel="stylesheet" href="{{url_for('static', filename='css/index.css')}}"></link>
+<link rel="stylesheet" href="{{url_for('static', filename='css/index.css')}}"></link>
 
 
-  <body>
-    <ul class="topnav">
-      <li><a class="logo" title="Home" href="/"><img src="{{url_for('static', filename='res/logoCloudTranslatorSVG.svg')}}" width="150px" height="60px"></a></li>
-      <li><a class="active" href="/">Home</a></li>
-      <li><a href="community.html">Community</a></li>
-      <li class="right"><a href="about.html">About</a></li>
-    </ul>
+<body>
+  <ul class="topnav">
+    <li><a class="logo" title="Home" href="/"><img src="static/res/logoCloudTranslatorSVG.svg"></a></li>
+    <li><a class="active" href="/">Home</a></li>
+    <li><a href="community.html">Community</a></li>
+    <li class="right"><a href="about.html">About</a></li>
+  </ul>
 
-   <div class="complex">
-    <select id="from" name="from" class="from" data-placeholder="Choose a Language...">
-      <option value="AR">Arabic</option>
-      <option value="AZ">Azerbaijani</option>
-      <option value="ZH">Chinese</option>
-      <option value="CS">Czech</option>
-      <option value="DA">Danish</option>
-      <option value="NL">Dutch</option>
-      <option value="EN">English</option>
-      <option value="EO">Esperanto</option>
-      <option value="FI">Finnish</option>
-      <option value="FR">French</option>
-      <option value="DE">German</option>
-      <option value="EL">Greek</option>
-      <option value="HE">Hebrew</option>
-      <option value="HI">Hindi</option>
-      <option value="HU">Hungarian</option>
-      <option value="ID">Indonesian</option>
-      <option value="GA">Irish</option>
-      <option value="IT" selected>Italian</option>
-      <option value="JA">Japanese</option>
-      <option value="KO">Korean</option>
-      <option value="FA">Persian</option>
-      <option value="PL">Polish</option>
-      <option value="PT">Portuguese</option>
-      <option value="PA">Punjabi</option>
-      <option value="RU">Russian</option>
-      <option value="SK">Slovak</option>
-      <option value="ES">Spanish</option>
-      <option value="SV">Swedish </option>
-      <option value="TR">Turkish</option>
-      <option value="UK">Ukrainian</option>
-    </select>
-    <!-- <textarea id="from_text" name="name" rows="8" cols="40%" onkeyup="setTimeout(send_text(),5000);"></textarea> -->
-    <!-- <textarea id="from_text" class="from_text" name="name" rows="8" cols="40%"></textarea> -->
-    <textarea id="from_text" name="name" rows="8" cols="40%"></textarea>
+  <div class="complex">
+    <div class="line1">
+      <select id="from" name="from" class="from" data-placeholder="Choose a Language...">
+        <option value="AR">Arabic</option>
+        <option value="AZ">Azerbaijani</option>
+        <option value="ZH">Chinese</option>
+        <option value="CS">Czech</option>
+        <option value="DA">Danish</option>
+        <option value="NL">Dutch</option>
+        <option value="EN">English</option>
+        <option value="EO">Esperanto</option>
+        <option value="FI">Finnish</option>
+        <option value="FR">French</option>
+        <option value="DE">German</option>
+        <option value="EL">Greek</option>
+        <option value="HE">Hebrew</option>
+        <option value="HI">Hindi</option>
+        <option value="HU">Hungarian</option>
+        <option value="ID">Indonesian</option>
+        <option value="GA">Irish</option>
+        <option value="IT" selected>Italian</option>
+        <option value="JA">Japanese</option>
+        <option value="KO">Korean</option>
+        <option value="FA">Persian</option>
+        <option value="PL">Polish</option>
+        <option value="PT">Portuguese</option>
+        <option value="PA">Punjabi</option>
+        <option value="RU">Russian</option>
+        <option value="SK">Slovak</option>
+        <option value="ES">Spanish</option>
+        <option value="SV">Swedish </option>
+        <option value="TR">Turkish</option>
+        <option value="UK">Ukrainian</option>
+      </select>
 
-    <button type="button" name="invert" id="invert" class= "invert"><i class="ri-arrow-left-right-fill"></i></button>
+      <select id="to" name="to" class="to" data-placeholder="Choose a Language...">
+        <option value="AR">Arabic</option>
+        <option value="AZ">Azerbaijani</option>
+        <option value="ZH">Chinese</option>
+        <option value="CS">Czech</option>
+        <option value="DA">Danish</option>
+        <option value="NL">Dutch</option>
+        <option value="EN" selected>English</option>
+        <option value="EO">Esperanto</option>
+        <option value="FI">Finnish</option>
+        <option value="FR">French</option>
+        <option value="DE">German</option>
+        <option value="EL">Greek</option>
+        <option value="HE">Hebrew</option>
+        <option value="HI">Hindi</option>
+        <option value="HU">Hungarian</option>
+        <option value="ID">Indonesian</option>
+        <option value="GA">Irish</option>
+        <option value="IT">Italian</option>
+        <option value="JA">Japanese</option>
+        <option value="KO">Korean</option>
+        <option value="FA">Persian</option>
+        <option value="PL">Polish</option>
+        <option value="PT">Portuguese</option>
+        <option value="PA">Punjabi</option>
+        <option value="RU">Russian</option>
+        <option value="SK">Slovak</option>
+        <option value="ES">Spanish</option>
+        <option value="SV">Swedish </option>
+        <option value="TR">Turkish</option>
+        <option value="UK">Ukrainian</option>
+      </select>
+    </div>
 
-    <select id="to" name="to" class="to" data-placeholder="Choose a Language...">
-      <option value="AR">Arabic</option>
-      <option value="AZ">Azerbaijani</option>
-      <option value="ZH">Chinese</option>
-      <option value="CS">Czech</option>
-      <option value="DA">Danish</option>
-      <option value="NL">Dutch</option>
-      <option value="EN" selected>English</option>
-      <option value="EO">Esperanto</option>
-      <option value="FI">Finnish</option>
-      <option value="FR">French</option>
-      <option value="DE">German</option>
-      <option value="EL">Greek</option>
-      <option value="HE">Hebrew</option>
-      <option value="HI">Hindi</option>
-      <option value="HU">Hungarian</option>
-      <option value="ID">Indonesian</option>
-      <option value="GA">Irish</option>
-      <option value="IT">Italian</option>
-      <option value="JA">Japanese</option>
-      <option value="KO">Korean</option>
-      <option value="FA">Persian</option>
-      <option value="PL">Polish</option>
-      <option value="PT">Portuguese</option>
-      <option value="PA">Punjabi</option>
-      <option value="RU">Russian</option>
-      <option value="SK">Slovak</option>
-      <option value="ES">Spanish</option>
-      <option value="SV">Swedish </option>
-      <option value="TR">Turkish</option>
-      <option value="UK">Ukrainian</option>
-    </select>
-    <textarea id="to_text" class="to_text" name="to_text" rows="8" cols="40%"></textarea>
-    <input type="button" id="translate" class="translate "name="translate" value="Translate">
+    <div class="line">
+      <textarea id="from_text" name="name"></textarea>
+      <button type="button" name="invert" id="invert" class= "invert translate"><i class="ri-arrow-left-right-fill"></i></button>
+      <textarea id="to_text" class="to_text" name="to_text"></textarea><br>
+    </div>
+    <input type="button" id="translate" class="translate" name="translate" value="Translate">
   </div>
 
   <footer id="footer">
@@ -98,12 +100,12 @@
       <p>
         <a href="https://web.unipv.it/" class="aliceblue">Università degli Studi di Pavia</a>
         <br>
-         Cloud Computing Project UNIPV © 2022
+        Cloud Computing Project UNIPV © 2022
       </p>
     </span>
   </footer>
 
-  </body>
+</body>
 
-  <script src="{{url_for('static', filename='scripts/index.js')}}"></script>
+<script src="{{url_for('static', filename='scripts/index.js')}}"></script>
 </html>
