--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -13,8 +13,8 @@
   <ul class="topnav">
     <li><a class="logo" title="Home" href="/"><img src="static/res/logoCloudTranslatorSvg.svg"></a></li>
     <li><a href="/">Home</a></li>
-    <li><a href="community.html">Community</a></li>
-    <li class="right"><a class="active" href="about.html">About</a></li>
+    <li><a href="community">Community</a></li>
+    <li class="right"><a class="active" href="about">About</a></li>
   </ul>
 
   <div class="complex">
