--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -14,8 +14,8 @@
   <ul class="topnav">
     <li><a class="logo" title="Home" href="/"><img src="static/res/logoCloudTranslatorSvg.svg"></a></li>
     <li><a class="active" href="/">Home</a></li>
-    <li><a href="community.html">Community</a></li>
-    <li class="right"><a href="about.html">About</a></li>
+    <li><a href="community">Community</a></li>
+    <li class="right"><a href="about">About</a></li>
   </ul>
 
   <div class="complex">
