TTS works on Firefox

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -89,8 +89,10 @@
 
     <div class="line">
       <textarea id="from_text" name="name"></textarea>
+      <button id="button_speak_from">Speak</button>
       <button type="button" name="invert" id="invert" class= "invert translate"><i class="ri-arrow-left-right-fill"></i></button>
       <textarea id="to_text" class="to_text" name="to_text"></textarea><br>
+      <button id="button_speak_to">Speak</button>
     </div>
     <input type="button" id="translate" class="translate" name="translate" value="Translate">
   </div>
