--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -96,6 +96,10 @@ ul.topnav li.right {float: right;}
     box-shadow: 10px 10px 30px rgb(35 71 163 / 50%);
 }
 
+.vertical_buttons {
+  display: grid;
+}
+
 #button_speak_from {
   margin-right: 5%;
 }
