--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -91,9 +91,16 @@
 
     <p class="textareas_line">
       <textarea id="from_text" name="from_text"></textarea>
-      <button id="button_speak_from">Speak</button>
+      <span class="vertical_buttons">
+        <button id="button_speak_from" class="speaker">Speak</button>
+        <button id="button_paste_from">Paste</button>
+      </span>
+
       <textarea id="to_text" class="to_text" name="to_text"></textarea><br>
-      <button id="button_speak_to">Speak</button>
+      <span class="vertical_buttons">
+        <button id="button_speak_to" class="speaker">Speak</button>
+        <button id="button_copy_to">Copy</button>
+      </span>
     </p>
     <input type="button" id="translate" class="button" name="translate" value="Translate">
   </div>
