added a button for sending the request to the db

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -100,6 +100,7 @@
       <span class="vertical_buttons">
         <button id="button_speak_to" class="speaker">Speak</button>
         <button id="button_copy_to">Copy</button>
+        <button id="button_query_to_db">;(</button>
       </span>
     </p>
     <input type="button" id="translate" class="button" name="translate" value="Translate">
