--- a/src/templates/community.html
+++ b/src/templates/community.html
@@ -13,12 +13,18 @@
   <ul class="topnav">
     <li><a class="logo" title="Home" href="/"><img src="static/res/logoCloudTranslatorSvg.svg"></a></li>
     <li><a href="/">Home</a></li>
-    <li><a class="active" href="community">Community</a></li>
+    <li><a class="active" href="community.html">Community</a></li>
     <li class="right"><a href="about">About</a></li>
   </ul>
 
   <div class="complex">
-    
+    <tabel>
+      {% for row in data %}
+      <tr>
+          <td>{{row}}</td>
+      </tr><br>
+      {% endfor %}
+      </table>
     </div>
   
 
