Textarea not editable

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -96,7 +96,7 @@
         <button id="button_paste_from">Paste</button>
       </span>
 
-      <textarea id="to_text" class="to_text" name="to_text"></textarea><br>
+      <textarea readonly id="to_text" class="to_text" name="to_text"></textarea><br>
       <span class="vertical_buttons">
         <button id="button_speak_to" class="speaker">Speak</button>
         <button id="button_copy_to">Copy</button>
