--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -92,15 +92,15 @@
     <p class="textareas_line">
       <textarea id="from_text" name="from_text"></textarea>
       <span class="vertical_buttons">
-        <button id="button_speak_from" class="speaker">Speak</button>
-        <button id="button_paste_from">Paste</button>
+        <button id="button_speak_from" class="speaker"><i class="ri-volume-up-line"></i></button>
+        <button id="button_paste_from"><i class="ri-clipboard-line"></i></button>
       </span>
 
       <textarea readonly id="to_text" class="to_text" name="to_text"></textarea><br>
       <span class="vertical_buttons">
-        <button id="button_speak_to" class="speaker">Speak</button>
-        <button id="button_copy_to">Copy</button>
-        <button id="button_query_to_db">;(</button>
+        <button id="button_speak_to" class="speaker"><i class="ri-volume-up-line"></i></button>
+        <button id="button_copy_to"><i class="ri-file-copy-line"></i></button>
+        <button id="button_query_to_db"><i class="ri-emotion-sad-line"></i></button>
       </span>
     </p>
     <input type="button" id="translate" class="button" name="translate" value="Translate">
