Added some icons

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -13,9 +13,9 @@
 <body>
   <ul class="topnav">
     <li><a class="logo" title="Home" href="/"><img src="static/res/logoCloudTranslatorSvg.svg"></a></li>
-    <li><a class="active" href="/">Home</a></li>
-    <li><a href="community.html">Community</a></li>
-    <li class="right"><a href="about.html">About</a></li>
+    <li><a class="active" href="/"><i class="ri-home-2-line"></i>&nbsp;Home</a></li>
+    <li><a href="community.html"><i class="ri-team-line"></i>&nbsp;Community</a></li>
+    <li class="right"><a href="about.html"><i class="ri-information-line"></i>&nbsp;About</a></li>
   </ul>
 
   <div class="complex">
