--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -108,6 +108,10 @@ ul.topnav li.right {float: right;}
   margin-right: 5%;
 }
 
+.button-icon {
+  font-size: 200%;
+}
+
 #to_text {
   margin-left: 5%;
 }
