--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" href="static/res/cloudtranslatorMiniLogoWhite.png">
+  <meta name="description" content="Website for a translator. This is a universitary project for the exam Cloud Computing, University of Pavia, Italy">
   <title>Unipv Translator</title>
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
@@ -12,16 +14,15 @@
 <body>
   <ul class="topnav">
     <li><a class="logo" title="Home" href="/"><img src="static/res/logoCloudTranslatorSvg.svg"></a></li>
-    <li><a href="/">Home</a></li>
-    <li><a href="community">Community</a></li>
-    <li class="right"><a class="active" href="about">About</a></li>
+    <li><a href="/"><i class="ri-home-2-line"></i>&nbsp;Home</a></li>
+    <li><a href="community"><i class="ri-team-line"></i>&nbsp;Community</a></li>
+    <li class="right"><a class="active" href="about"><i class="ri-information-line"></i>&nbsp;About</a></li>
   </ul>
 
   <div class="complex">
     
-    </div>
+  </div>
   
-
   <footer id="footer">
     <span>
       <p>
