--- a/src/templates/community.html
+++ b/src/templates/community.html
@@ -3,30 +3,37 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" href="static/res/cloudtranslatorMiniLogoWhite.png">
+  <meta name="description" content="Website for a translator. This is a universitary project for the exam Cloud Computing, University of Pavia, Italy">
   <title>Unipv Translator</title>
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 
 <link rel="stylesheet" href="../static/css/index.css"></link>
+<link rel="stylesheet" href="../static/css/community.css"></link>
 
 <body>
   <ul class="topnav">
     <li><a class="logo" title="Home" href="/"><img src="static/res/logoCloudTranslatorSvg.svg"></a></li>
-    <li><a href="/">Home</a></li>
-    <li><a class="active" href="community.html">Community</a></li>
-    <li class="right"><a href="about">About</a></li>
+    <li><a href="/"><i class="ri-home-2-line"></i>&nbsp;Home</a></li>
+    <li><a class="active" href="community"><i class="ri-team-line"></i>&nbsp;Community</a></li>
+    <li class="right"><a href="about"><i class="ri-information-line"></i>&nbsp;About</a></li>
   </ul>
 
-  <div class="complex">
-    <table>
+  <ul class="big-list">
       {% for row in data %}
-      <tr>
-          <td>{{row}}</td>
-      </tr><br>
+      <li class="item">
+          <td>
+            <ul class="list-item">
+              <li>FROM_LANG: {{ row[0] }}</li>
+              <li>TO_LANG: {{ row[1] }}</li>
+              <li>FROM_TEXT: {{ row[2] }}</li>
+              <li>TO_TEXT: {{ row[3] }}</li>
+            </ul>
+          </td>
+        </li>
       {% endfor %}
-      </table>
-    </div>
-  
+    </ul>
 
   <footer id="footer">
     <span>
