--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" href="static/res/cloudtranslatorMiniLogoWhite.png">
+  <meta name="description" content="Website for a translator. This is a universitary project for the exam Cloud Computing, University of Pavia, Italy">
   <title>Unipv Translator</title>
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
@@ -14,9 +16,16 @@
   <ul class="topnav">
     <li><a class="logo" title="Home" href="/"><img src="static/res/logoCloudTranslatorSvg.svg"></a></li>
     <li><a class="active" href="/"><i class="ri-home-2-line"></i>&nbsp;Home</a></li>
-    <li><a href="community.html"><i class="ri-team-line"></i>&nbsp;Community</a></li>
-    <li class="right"><a href="about.html"><i class="ri-information-line"></i>&nbsp;About</a></li>
+    <li><a href="community"><i class="ri-team-line"></i>&nbsp;Community</a></li>
+    <li class="right"><a href="about"><i class="ri-information-line"></i>&nbsp;About</a></li>
   </ul>
+
+  <div class="short-bio">
+    <p>
+      This translator is a university project. Created by 5 students of the master's degree in Computer Engineering at the <a href="https://web.unipv.it/" class="aliceblue">University of Pavia</a>, Italy. 
+      It is based on the open-source project <a href="https://www.argosopentech.com/" class="aliceblue">Argos Translate</a> , that is, a Python library base on <a href="https://opennmt.net/" class="aliceblue">OpenNMT</a>. 
+    </p>
+  </div>
 
   <div class="complex">
     <p class="selects_line">
