--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="static/res/CloudComputingFavicon.svg">
+  <link rel="icon" href="static/res/CloudComputingFaviconLight.svg" id="light-scheme-icon">
+  <link rel="icon" href="static/res/CloudComputingFaviconDark.svg" id="dark-scheme-icon">
   <meta name="description" content="Website for a translator. This is a universitary project for the exam Cloud Computing, University of Pavia, Italy">
   <title>Cloud Translator</title>
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
