--- a/src/templates/community.html
+++ b/src/templates/community.html
@@ -24,6 +24,7 @@
       <li id="{{ row[4] }}" class="item">
           <td>
             <ul class="list-item">
+              <li>ID: {{ row[4] }}</li>
               <li class="complaints">COMPLAINTS: {{ row[5] }}</li>
               <li>FROM_LANG: {{ row[0] }}</li>
               <li>TO_LANG: {{ row[1] }}</li>
