Some style changes

--- a/src/templates/community.html
+++ b/src/templates/community.html
@@ -31,7 +31,7 @@
               <li id="fromText" class="fromText" name="fromText">{{ row[2] }}</li>
               <li>TO_TEXT: {{ row[3] }}</li>
               <textarea id="to_text_possible" class="to_text_possible" name="to_text_possible"></textarea>
-              <li class="possible-translations-area"><button id="possible-translations-button" onclick="sendQueryToDB2('{{ row[4] }}')">Possible Translations</button></li>
+              <li class="possible-translations-area"><button id="possible-translations-button" class="button" onclick="sendQueryToDB2('{{ row[4] }}')">Submit</button></li>
             </ul>
           </td>
         </li>
