--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -21,8 +21,8 @@
 
   <div class="short-bio">
     <p>
-      This translator is a university project. Created by 5 students of the master's degree in Computer Engineering at the <a href="https://web.unipv.it/" class="aliceblue">University of Pavia</a>, Italy.
-      It is based on the open-source project <a href="https://www.argosopentech.com/" class="aliceblue">Argos Translate</a> , that is, a Python library base on <a href="https://opennmt.net/" class="aliceblue">OpenNMT</a>.
+      This translator is a university project. <br>Created by 5 students of the master's degree in Computer Engineering at the <a href="https://web.unipv.it/" class="aliceblue">University of Pavia</a>, Italy.
+      <br>It is based on the open-source project <a href="https://www.argosopentech.com/" class="aliceblue">Argos Translate</a> , that is, a Python library base on <a href="https://opennmt.net/" class="aliceblue">OpenNMT</a>.
     </p>
   </div>
 
