--- a/src/static/css/community.css
+++ b/src/static/css/community.css
@@ -22,12 +22,17 @@ ul{
 
 .complaints{
     position: relative;
-    width: 10%;
+    width: fit-content;
     left: 85%;
-    font-size: smaller;
+    font-size: 0.7em;
+    text-align: center;
     padding: 1%;
     border-radius: 15px;
-    background-color:rgb(35 71 163 / 50%);
+    background-color:rgba(35, 71, 163, 0.8);
+    align-items: center;
+    border: 2px solid #000;
+    box-sizing: border-box;
+    color: #fff;
 }
 
 .possible-translations-area{
@@ -53,5 +58,49 @@ ul{
 
 #possible-translations-button{
     border-radius: 15px;
-    background-color:rgba(2, 27, 91, 0.5);
 }
+
+.button {
+    align-items: center;
+    background-color: #fff;
+    border: 2px solid #000;
+    box-sizing: border-box;
+    color: #000;
+    cursor: pointer;
+    display: inline-flex;
+    fill: #000;
+    font-family: Quicksand;
+    font-size: 20px;
+    font-weight: 600;
+    height: 48px;
+    justify-content: center;
+    letter-spacing: -.8px;
+    line-height: 24px;
+    min-width: 140px;
+    outline: 0;
+    padding: 0 17px;
+    text-align: center;
+    text-decoration: none;
+    transition: all .3s;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+  }
+  
+  .button:focus {
+    color: #06f;
+    fill: #06f;
+    border-color: #06f;
+  }
+  
+  .button:hover {
+    border-color: #06f;
+    color: #06f;
+    fill: #06f;
+  }
+  
+  .button:active {
+    border-color: #06f;
+    color: #06f;
+    fill: #06f;
+  }
