--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -54,11 +54,12 @@ ul.topnav li.right {float: right;}
 
 .short-bio{
   position: relative;
+  text-align: center;
   width: 80%;
   left: 10%;
   margin-top: 5%;
   padding: 1%;
-  background-color:rgb(35 71 163 / 50%);
+  background-color:rgb(35 71 163 / 45%);
   font-size: larger;
   border-radius: 15px;
   box-shadow: 10px 10px 30px rgb(35 71 163 / 50%);
