extracted hash generator in module

--- a/src/templates/community.html
+++ b/src/templates/community.html
@@ -50,6 +50,6 @@
 
 </body>
 
-<script src="{{url_for('static', filename='scripts/community.js')}}"></script>
-<script src="{{url_for('static', filename='scripts/common.js')}}"></script>
+<script type="module" src="{{url_for('static', filename='scripts/community.js')}}"></script>
+<script type="module" src="{{url_for('static', filename='scripts/common.js')}}"></script>
 </html>
