--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -34,5 +34,5 @@
 
 </body>
 
-<script src="{{url_for('static', filename='scripts/common.js')}}"></script>
+<script type="module" src="{{url_for('static', filename='scripts/common.js')}}"></script>
 </html>
