--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -126,6 +126,6 @@
 
 </body>
 
-<script src="{{url_for('static', filename='scripts/common.js')}}"></script>
-<script src="{{url_for('static', filename='scripts/index.js')}}"></script>
+<script type="module" src="{{url_for('static', filename='scripts/common.js')}}"></script>
+<script type="module" src="{{url_for('static', filename='scripts/index.js')}}"></script>
 </html>
