--- a/src/templates/community.html
+++ b/src/templates/community.html
@@ -24,7 +24,7 @@
       <li id="{{ row[4] }}" class="item {{ row[4] }}">
           <td>
             <ul class="list-item">
-              <li id="id_textarea">{{ row[4] }}</li>
+              <!-- <li id="id_textarea">{{ row[4] }}</li> -->
               <li class="complaints">COMPLAINTS: {{ row[5] }}</li>
               <li>FROM_LANG: {{ row[0] }}</li>
               <li>TO_LANG: {{ row[1] }}</li>
